[package]
name = "hyperliquid-orderbook"
version = "0.1.0"
edition = "2021"
description = "real time datafeed for hyperliquid "
repository = "https://github.com/leote/hl-datafeed/tree/main"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
serde_json = "1.0"
chrono = "0.4"
ordered-float = "4.2"